--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,24 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
 
+.order-wrapper:nth-child(even) {
+  border-inline: 2px solid black;
+  background-color: white;
+}
+
+.order-wrapper:nth-child(odd) {
+  background-color: lightgrey;
+  border: 2px solid black;
+}
+
+.order-wrapper:last-child {
+  border-bottom: 2px solid black;
+}
+
+.top-order-flex {
+  color: black;
+  padding-inline: 1rem;
+}
+
 /*!
  * Bootstrap v4.6.2 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
