--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,7 +2,7 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: "Nunito", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
@@ -17,3 +17,20 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+// ORDER ANALYTICS CSS
+.order-wrapper:nth-child(even) {
+    border-inline: 2px solid black;
+    background-color: white;
+}
+.order-wrapper:nth-child(odd) {
+    background-color: lightgrey;
+    border: 2px solid black;
+}
+.order-wrapper:last-child {
+    border-bottom: 2px solid black;
+}
+.top-order-flex {
+    color: black;
+    padding-inline: 1rem;
+}
