--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21463,3 +21463,37 @@ readers do not read off random characters that represent icons */
   content: "\F3F6";
 }
 
+.navbar {
+  background-color: black;
+}
+
+.nav-item a {
+  margin: 0 10px;
+  letter-spacing: 3px;
+}
+
+.nav-item .login {
+  border: 1.5px solid rgb(255, 204, 0);
+  border-radius: 20px;
+  color: white;
+}
+
+.nav-item .signup {
+  border-radius: 20px;
+  background-color: rgb(226, 181, 0);
+}
+
+.logo {
+  width: 35%;
+}
+
+.spacing-form {
+  background-color: #ffcc00;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.navbar-light .navbar-toggler {
+  background-color: #ffcc00;
+}
+
