--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21465,10 +21465,11 @@ readers do not read off random characters that represent icons */
 
 .navbar {
   background-color: black;
+  padding: 0;
 }
 
 .navbar-admin {
-  padding: 20px 0;
+  padding: 10px 0;
 }
 
 .nav-item a {
@@ -21494,13 +21495,13 @@ readers do not read off random characters that represent icons */
 }
 
 .back-logo {
-  width: 35%;
+  width: 95px;
 }
 
 .spacing-form {
   min-height: 100vh;
   background-color: #ffcc00;
-  padding-top: 2rem;
+  padding-top: 5rem;
   padding-bottom: 2rem;
 }
 
@@ -21508,7 +21509,12 @@ readers do not read off random characters that represent icons */
   background-color: #ffcc00;
 }
 
+.sidebar {
+  background-color: rgba(0, 0, 0, 0.9411764706);
+}
+
 .left-navbar-admin {
   min-height: 100vh;
+  margin-top: 30px;
 }
 
