--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,10 +20,13 @@
 
 .navbar{
     background-color: black;
+    padding: 0;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+
 }
 
 .navbar-admin{
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 .nav-item{
@@ -53,13 +56,13 @@
 }
 
 .back-logo{
-    width: 35%;
+    width: 95px;
 }
 
 .spacing-form{
     min-height: 100vh;
     background-color: #ffcc00;
-    padding-top: 2rem;
+    padding-top: 5rem;
     padding-bottom: 2rem;    
     
 }
@@ -68,6 +71,15 @@
     background-color: #ffcc00;
 }
 
+.sidebar {
+    background-color: #000000f0
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+
+}
+
 .left-navbar-admin{
     min-height: 100vh;
+    margin-top: 30px;
+    
+    
 }
