--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21476,7 +21476,7 @@ a {
 }
 
 .main {
-  padding-bottom: 50px;
+  padding-bottom: 120px;
 }
 
 .navbar {
@@ -21553,5 +21553,9 @@ a {
   background-color: black;
   width: 100%;
   z-index: 10;
+}
+
+.btn {
+  margin-bottom: 10px;
 }
 
