--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,7 +22,7 @@ a {
 }
 
 .main {
-    padding-bottom: 50px;
+    padding-bottom: 120px;
 }
 
 
@@ -111,4 +111,8 @@ a {
     background-color: black;
     width: 100%;
     z-index: 10;
+}
+
+.btn {
+    margin-bottom: 10px;
 }
