--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,6 +22,7 @@ a {
 }
 
 .main {
+    margin-top: 70px;
     padding-bottom: 120px;
 }
 
@@ -66,7 +67,7 @@ a {
 }
 
 .back-logo{
-    width: 95px;
+    width: 85px;
 }
 
 .spacing-form{
